Add menu links for navbar on mobile screens.

--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ body,
   height: 100%;
   width: 100%;
   font-family: "Poppins", sans-serif;
-  @apply text-berry-500;
+  @apply text-cream-500;
 }
